--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="https://jessieyu0105.github.io/dsi_project_website.io">
+  <a href="https://github.com/jessieyu0105/dsi_project_website.io">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
