--- a/about.html
+++ b/about.html
@@ -289,7 +289,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="https://jessieyu0105.github.io/dsi_project_website.io">
+  <a href="https://github.com/jessieyu0105/dsi_project_website.io">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -345,11 +345,6 @@ div.tocify {
 </ul>
 <center>
 </center>
-</div>
-<div id="github" class="section level3">
-<h3>Github</h3>
-<p>Sometimes you need to say a bit about the site – how it was made, where it’s hosted, where the source code can be found.</p>
-<p>Here is the Github repository of our project, you can be find everything you need <a href="https://github.com/zixuanzhang/p8105_Final_Project">here</a>.</p>
 </div>
 
 <br><br>
